--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,9 +1,9 @@
 html
   head
-    title WebRTC Chat
+    title Word Guess
     link(rel='stylesheet', type='text/css', href='/css/app.css')
 
   body
-    h1 WebRTC Chat
+    h1 Word Guess
     block content
     script(src='/javascripts/app.js')
